force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/copado_envmgr__EnvironmentDefinition__c.object-meta.xml
<CustomObject>
    <description>Definition of Sandboxes or Scratch Orgs</description>
    <label>Environment Definition</label>
    <nameField>
        <label>Environment Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>