force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__ApexAfterMetadataDeployment__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__ApexAfterMetadataDeployment__c</fullName>
    <description>Anonymous Apex code to be executed after all the Metadata has been deployed</description>
    <inlineHelpText>Anonymous Apex code to be executed after all the Metadata has been deployed</inlineHelpText>
    <label>Apex After Metadata Deployment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>