force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__ApexAfterOrgCreation__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__ApexAfterOrgCreation__c</fullName>
    <description>Anonymous Apex code to be executed after Sandbox/Scratch Org Creation</description>
    <inlineHelpText>Anonymous Apex code to be executed after Sandbox/Scratch Org Creation</inlineHelpText>
    <label>Apex After Org Creation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>