force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__AvailableOrgs__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__AvailableOrgs__c</fullName>
    <label>Available Orgs</label>
    <summaryFilterItems>
        <field>copado_envmgr__EnvironmentOrg__c.copado_envmgr__Status__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>copado_envmgr__EnvironmentOrg__c.copado_envmgr__EnvironmentDefinition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>