force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__DefaultBranch__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__DefaultBranch__c</fullName>
    <description>Default branch where the metadata will be taken. It must be part of the Project/Pipeline related to this Environment, or empty (meaning that no deployment will be run)</description>
    <inlineHelpText>Default branch where the metadata will be taken. It must be part of the Project/Pipeline related to this Environment, or empty (meaning that no deployment will be run)</inlineHelpText>
    <label>Source Branch of the Metadata</label>
    <length>255</length>
    <type>Text</type>
</CustomField>