force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__DeleteJobTemplate__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__DeleteJobTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delete Job Template</label>
    <referenceTo>copado__JobTemplate__c</referenceTo>
    <relationshipLabel>Environment Definitions (Delete Job Template)</relationshipLabel>
    <relationshipName>Environment_Definitions1</relationshipName>
    <type>Lookup</type>
</CustomField>