force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__DesiredAvailableOrgs__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__DesiredAvailableOrgs__c</fullName>
    <description>Set this value if you want to create a pool of available Orgs. Every time an Org is used, a new org will be created behind the scenes, so the next time an org is desired, it is already available.

If this is not set, the Enviroments will be created on-demand</description>
    <inlineHelpText>Set this value if you want to create a pool of available Orgs. Every time an Org is used, a new org will be created behind the scenes, so the next time an org is desired, it is already available.

If this is not set, the Enviroments will be created on-demand</inlineHelpText>
    <label>Number of desired Available Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>