force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__ExpirationDays__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__ExpirationDays__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Expiration date you desire for this Sandbox or Scratch Org. For Scratch Orgs Expiration must be less than 30 days.</description>
    <inlineHelpText>Expiration date you desire for this Sandbox or Scratch Org. For Scratch Orgs Expiration must be less than 30 days.</inlineHelpText>
    <label>Expiration (Days)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>