force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__Git_Repository__c</fullName>
    <formula>copado_envmgr__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__c</formula>
    <label>Git Repository</label>
    <type>Text</type>
</CustomField>