force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__OrgType__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__OrgType__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sandbox</fullName>
                <default>true</default>
                <label>Sandbox</label>
            </value>
            <value>
                <fullName>Scratch Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>