force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__ParentEnvironment__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__ParentEnvironment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Sandbox Parent or DevHub Environment</description>
    <inlineHelpText>Sandbox Parent or DevHub Environment</inlineHelpText>
    <label>Parent Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Environment Definitions</relationshipLabel>
    <relationshipName>Environment_Definitions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>