force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__Pipeline__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__Pipeline__c</fullName>
    <formula>copado_envmgr__Project__r.copado__Deployment_Flow__c</formula>
    <label>Pipeline</label>
    <type>Text</type>
</CustomField>