force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__PipelineDestinationEnvId__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__PipelineDestinationEnvId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Environment in Pipeline</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Environment Definitions (Destination Environment in Pipeline)</relationshipLabel>
    <relationshipName>Environment_Definitions1</relationshipName>
    <type>Lookup</type>
</CustomField>