force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/fields/copado_envmgr__Status__c.field-meta.xml
<CustomField>
    <fullName>copado_envmgr__Status__c</fullName>
    <description>Only &quot;Ready&quot; environment definitions can be used by regular Users, and &quot;Developing&quot; only mocks the creation of Orgs (see the documentation for details).</description>
    <inlineHelpText>Only &quot;Ready&quot; environment definitions can be used by regular Users, and &quot;Developing&quot; only mocks the creation of Orgs (see the documentation for details).</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developing</fullName>
                <default>true</default>
                <label>Developing</label>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>