force-app/main/default/objects/copado_envmgr__EnvironmentDefinition__c/listViews/copado_envmgr__All.listView-meta.xml
<ListView>
    <fullName>copado_envmgr__All</fullName>
    <columns>NAME</columns>
    <columns>copado_envmgr__OrgType__c</columns>
    <columns>copado_envmgr__ExpirationDays__c</columns>
    <columns>copado_envmgr__DefaultBranch__c</columns>
    <columns>copado_envmgr__Project__c</columns>
    <columns>copado_envmgr__JobTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>